--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -12,3 +12,6 @@
 @forward "./text-content";
 @forward "./search-bar";
 @forward "./modal";
+@forward "./payment-card";
+@forward "./account-info";
+@forward "./order";
