--- a/scss/pages/_cart.scss
+++ b/scss/pages/_cart.scss
@@ -29,7 +29,14 @@
     padding: 16px;
   }
 
+  &__back-arrow {
+    width: 50px;
+    padding-right: 20px;
+  }
+
   &__heading {
+    display: flex;
+    align-items: center;
     font-size: 2.4rem;
     font-weight: 700;
     line-height: 1.42; /* 141.667% */
