--- a/templates/header.html
+++ b/templates/header.html
@@ -34,6 +34,7 @@
             Departments
             <img src="./assets/img/icons/arrow-down.svg" class="navbar__arrow icon" alt="" />
           </a>
+          <!-- dropdown Departments  -->
           <div class="dropdown js-dropdown">
             <div class="dropdown__inner">
               <div class="top-menu">
@@ -812,6 +813,54 @@
 
       <div class="top-act__user">
         <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
+
+        <!-- Dropdown -->
+        <div class="act-dropdown top-act__dropdown">
+          <div class="act-dropdown__inner user-menu">
+            <img src="./assets/img/icons/arrow-up.svg" alt="" class="act-dropdown__arrow top-act__dropdown-arrow" />
+
+            <div class="user-menu__top">
+              <img src="./assets/img/avatar.jpg" alt="" class="user-menu__avarta" />
+              <div>
+                <p class="user-menu__name">Duc Tan</p>
+                <p class="user-menu__email">ductan004@gmail.com</p>
+              </div>
+            </div>
+
+            <ul class="user-menu__list">
+              <li>
+                <a href="./profile.html" class="user-menu__link">
+                  <img src="./assets/img/icons/user.svg" alt="" class="icon user-menu__icon" />
+                  Profile
+                </a>
+              </li>
+              <li>
+                <a href="./cart.html" class="user-menu__link">
+                  <img src="./assets/img/icons/cart.svg" alt="" class="icon user-menu__icon" />
+                  Cart
+                </a>
+              </li>
+              <li class="user-menu__separate">
+                <a href="#!" class="user-menu__link" id="switch-theme-btn">
+                  <img src="./assets/img/icons/sun.svg" alt="" class="icon user-menu__icon" />
+                  <span> Dark mode</span>
+                </a>
+              </li>
+              <li>
+                <a href="./cart.html" class="user-menu__link">
+                  <img src="./assets/img/icons/setting.svg" alt="" class="icon user-menu__icon" />
+                  Setting
+                </a>
+              </li>
+              <li class="user-menu__separate">
+                <a href="#!" class="user-menu__link">
+                  <img src="./assets/img/icons/logout.svg" alt="" class="icon user-menu__icon" />
+                  Logout
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
