--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,7 +141,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: "Gordita", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: var(--text-color);
   background: var(--body-bg);
 }
@@ -1593,7 +1593,7 @@ html.dark {
 }
 
 .top-bar {
-  padding: 30px 0;
+  padding: 16px 0;
   position: relative;
   z-index: 1;
 }
@@ -2352,7 +2352,7 @@ html.dark {
 }
 .slideshow__item {
   position: relative;
-  padding-top: 34%;
+  padding-top: 26%;
   flex-shrink: 0;
   width: 100%;
 }
@@ -2427,7 +2427,7 @@ html.dark {
   align-items: center;
   gap: 20px;
   height: 100%;
-  padding: 20px 26px;
+  padding: 20px;
   border-radius: 16px;
   background: var(--cate-item-bg);
 }
@@ -2443,8 +2443,8 @@ html.dark {
 }
 .cate-item__thumb {
   border-radius: 8px;
-  width: 116px;
-  height: 116px;
+  width: 100px;
+  height: 100px;
   object-fit: contain;
   background: var(--cate-item-thumb-bg);
 }
