--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,7 +11,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: "Gordita", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: var(--text-color);
   background: var(--body-bg);
 }
